# gtk-js

./: README.md  justfile  meson.build  org.gtkjs.app.yml  resources.gresource
data/: meson.build  org.gtkjs.app.data.gresource.gresource  org.gtkjs.app.data.gresource.xml  resource.xml
data/ui/: WelcomeWidget.ui
src/: Application.js  WelcomeWidget.js  Window.js  main.js  meson.build  org.gtkjs.app.data.gresource.xml  org.gtkjs.app.js  org.gtkjs.app.src.gresource.gresource  org.gtkjs.app.src.gresource.xml
